
bin_PROGRAMS = echoTest
echoTest_SOURCES = echoTest.cxx $(SHARED_SRCS)
echoTest_CXXFLAGS = $(GSTREAMERMM_1_0_CFLAGS)
echoTest_LDADD = $(GSTREAMERMM_1_0_LIBS) $(LDADD)
echoTest_LDADD += ../../resip/dum/libdum.la
echoTest_LDADD += ../../resip/stack/libresip.la
echoTest_LDADD += ../../rutil/librutil.la


